--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-        <title>Organizer</title>
+        <title>ToDo</title>
     </head>
     <body>
         <div class="navbar navbar-default">
@@ -44,7 +44,7 @@
             <div class="col-md-2">
               <div class="list-group">
                 <a href="/organizer/main" class="list-group-item active">SIMPLE ORGANIZER_ _splutsk</a>
-                <a href="/organizer/todo" class="list-group-item">ToDo</a>
+                <a href="#" class="list-group-item">ToDo</a>
                 <a href="#" class="list-group-item">Task</a>
                 <a href="#" class="list-group-item">Event</a>
                 <a href="#" class="list-group-item">Budget</a>
@@ -53,7 +53,15 @@
               </div>
             </div>
             <div class="col-md-10">
-               <h1 align="center">SIMPLE ORGANIZER</h1>
+                {% for ToDo in ToDo  %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <h3 class="panel-title"> {{ ToDo.owner }} - {{ ToDo.title }}</h3>
+                        </div>
+                        <div class="panel-body"> {{ ToDo.body }} -{{ ToDo.creation_data }}
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </body>
