--- a/todo/templates/event.html
+++ b/todo/templates/event.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-        <title>Organizer</title>
+        <title>Event</title>
     </head>
     <body>
         <div class="navbar navbar-default">
@@ -54,7 +54,17 @@
               </div>
             </div>
             <div class="col-md-10">
-               <h1 align="center">SIMPLE ORGANIZER</h1>
+                {% for Event in Event  %}
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <h3 class="panel-title"> {{ Event.owner }} - {{ Event.title }}</h3>
+                        </div>
+                        <div class="panel-body"> {{ Event.body }} -{{ Event.event_datetime }}
+                            <hr>
+                            {{ Event.repeat }}
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </body>
