--- a/todo/templates/passorg.html
+++ b/todo/templates/passorg.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-        <title>Organizer</title>
+        <title>Password Organizer</title>
     </head>
     <body>
         <div class="navbar navbar-default">
@@ -54,7 +54,13 @@
               </div>
             </div>
             <div class="col-md-10">
-               <h1 align="center">SIMPLE ORGANIZER</h1>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                        <h3 class="panel-title"> Password Organizer</h3>
+                        </div>
+                        <div class="panel-body"><h3>Your pass ))</h3>
+                        </div>
+                    </div>
             </div>
         </div>
     </body>
