--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -44,12 +44,13 @@
             <div class="col-md-2">
               <div class="list-group">
                 <a href="/organizer/main" class="list-group-item active">SIMPLE ORGANIZER_ _splutsk</a>
-                <a href="#" class="list-group-item">ToDo</a>
-                <a href="#" class="list-group-item">Task</a>
-                <a href="#" class="list-group-item">Event</a>
-                <a href="#" class="list-group-item">Budget</a>
-                <a href="#" class="list-group-item">Contact</a>
-                <a href="#" class="list-group-item">Password Organizer</a>
+                <a href="/organizer/todo" class="list-group-item">ToDo</a>
+                <a href="/organizer/task" class="list-group-item">Task</a>
+                <a href="/organizer/event" class="list-group-item">Event</a>
+                  <a href="/organizer/diary" class="list-group-item">Diary</a>
+                <a href="/organizer/budget" class="list-group-item">Budget</a>
+                <a href="/organizer/contact" class="list-group-item">Contact</a>
+                <a href="/organizer/passorg" class="list-group-item">Password Organizer</a>
               </div>
             </div>
             <div class="col-md-10">
@@ -58,7 +59,7 @@
                         <div class="panel-heading">
                         <h3 class="panel-title"> {{ ToDo.owner }} - {{ ToDo.title }}</h3>
                         </div>
-                        <div class="panel-body"> {{ ToDo.body }} -{{ ToDo.creation_data }}
+                        <div class="panel-body"> {{ ToDo.body }} - {{ ToDo.creation_data }} // {{ ToDo.finished }}
                         </div>
                     </div>
                 {% endfor %}
