Use *include template.html* in all views

--- a/todo/templates/about.html
+++ b/todo/templates/about.html
@@ -5,6 +5,7 @@
     <title>About</title>
 </head>
 <body>
-    <h1>About page</h1>
+    {% include 'template.html' %}
+        <h1>About page</h1>
 </body>
 </html>
