Change some things in templates

--- a/todo/templates/budget.html
+++ b/todo/templates/budget.html
@@ -8,6 +8,7 @@
     </head>
     <body>
     {% include 'template.html' %}
+    {% for Budget in Budget %}
         <div class="col-md-10">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -19,5 +20,6 @@
                 </div>
             </div>
         </div>
+    {% endfor %}
     </body>
 </html>
