--- a/todo/templates/diary.html
+++ b/todo/templates/diary.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         {% include 'template.html' %}
+        {% for Diary in Diary  %}
             <div class="col-md-10">
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -18,5 +19,6 @@
                     </div>
                 </div>
             </div>
+        {% endfor %}
     </body>
 </html>
