--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -35,7 +35,17 @@
                       <li><a href="#">One more separated link</a></li>
                     </ul>
                   </li>
+                  <li><a href="#userpage">HELLO {{ user }} </a></li>
+
                 </ul>
+                  <ul class="sidebar-nav">
+                       {% if user.is_authenticated %}
+                         <li>User: {{ user.get_username }}</li>
+                         <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+                       {% else %}
+                         <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+                       {% endif %}
+                  </ul>
               </div><!--/.nav-collapse -->
             </div>
         </div>
