Created basic views for Budget & Task APPs

--- a/todo/templates/main.html
+++ b/todo/templates/main.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         {% include 'template.html' %}
-            <div class="col-md-10">
-                <h1 align="center">SIMPLE ORGANIZER</h1>
+             <div class="col-md-10">
+                <h1 align="center">SIMPLE ORGANIZER</h1><hr>
             </div>
+                <img src="{{user_avatar_big}}"/>
     </body>
 </html>
