Created basic views for Diary APP

--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -55,7 +55,7 @@
                     <a href="#" class="list-group-item" align="center" ><b>Hello<br>{{user}}</b><br>
                         <img src="{{user_avatar}}"/></a>
                     <a href="/task/all" class="list-group-item">+Task</a>
-                    <a href="/organizer/diary" class="list-group-item">-Diary</a>
+                    <a href="/diary/all" class="list-group-item">+Diary</a>
                     <a href="/budget/main" class="list-group-item">+Budget</a>
                     <a href="/contact" class="list-group-item">-Contact</a>
                     <a href="/passorg" class="list-group-item">-Password Organizer</a>
