Add basic list views to Contact APP

--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -57,7 +57,7 @@
                     <a href="/task/all" class="list-group-item">+Task</a>
                     <a href="/diary/all" class="list-group-item">+Diary</a>
                     <a href="/budget/main" class="list-group-item">+Budget</a>
-                    <a href="/contact" class="list-group-item">-Contact</a>
+                    <a href="/contacts/all" class="list-group-item">+Contacts</a>
                     <a href="/passorg" class="list-group-item">-Password Organizer</a>
                   </div>
                 </div>
