Create basic forms for all APPs

--- a/budget/templates/budget.html
+++ b/budget/templates/budget.html
@@ -41,6 +41,7 @@
 <div class="col-md-2">
         <div class="list-group">
             <a class="list-group-item active">_OPERATIONS_</a>
+            <a href="/budget/add_budget" class="list-group-item">Add Budget</a>
             <a href="#" class="list-group-item">Make PDF by period</a>
         </div>
         <div class="list-group">
