--- a/task/templates/task.html
+++ b/task/templates/task.html
@@ -94,9 +94,9 @@
 <div class="col-md-2">
         <div class="list-group">
             <a class="list-group-item active">_OPERATIONS_</a>
-            <a href="#" class="list-group-item">Add new ShortTask</a>
-            <a href="#" class="list-group-item">Add new Task</a>
-            <a href="#" class="list-group-item">Add new Event</a>
+            <a href="/task/create_st" class="list-group-item">Add new ShortTask</a>
+            <a href="/task/create_task" class="list-group-item">Add new Task</a>
+            <a href="/task/create_event" class="list-group-item">Add new Event</a>
         </div>
         <div class="panel panel-danger">
             <div class="panel-heading"><h3 class="panel-title">_coming soon_</h3></div>
