--- a/contacts/templates/contacts.html
+++ b/contacts/templates/contacts.html
@@ -36,7 +36,7 @@
     <div class="col-md-2">
         <div class="list-group">
             <a class="list-group-item active">_OPERATIONS_</a>
-            <a href="#" class="list-group-item">Add new contact</a>
+            <a href="/contacts/create_contact/" class="list-group-item">Add new contact</a>
         </div>
     </div>
 </body>
