--- a/diary/templates/diary.html
+++ b/diary/templates/diary.html
@@ -32,7 +32,7 @@
 <div class="col-md-2">
         <div class="list-group">
             <a class="list-group-item active">_OPERATIONS_</a>
-            <a href="#" class="list-group-item">Add new note</a>
+            <a href="/diary/create_diary/" class="list-group-item">Add new note</a>
         </div>
 </div>
 </body>
