--- a/password/templates/passorg.html
+++ b/password/templates/passorg.html
@@ -30,7 +30,7 @@
 <div class="col-md-2">
         <div class="list-group">
             <a class="list-group-item active">_OPERATIONS_</a>
-            <a href="#" class="list-group-item">Add new PASS</a>
+            <a href="/passorg/create_passw/" class="list-group-item">Add new PASS</a>
         </div>
 </div>
 </body>
