--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -40,11 +40,11 @@
                     <a href="/organizer/main" class="list-group-item active">_SIMPLE ORGANIZER_</a>
                     <a href="#" class="list-group-item" align="center" ><b>Hello<br>{{user}}</b><br>
                         <img src="{{user_avatar}}"/></a>
-                    <a href="/task/all" class="list-group-item">Task</a>
-                    <a href="/diary/all" class="list-group-item">Diary</a>
-                    <a href="/budget/main" class="list-group-item">Budget</a>
-                    <a href="/contacts/all" class="list-group-item">Contacts</a>
-                    <a href="/passorg/all" class="list-group-item">Password Organizer</a>
+                    <a href="/task/task/list" class="list-group-item">Task</a>
+                    <a href="/diary" class="list-group-item">Diary</a>
+                    <a href="/budget/invoice/list" class="list-group-item">Budget</a>
+                    <a href="/contacts/list" class="list-group-item">Contacts</a>
+                    <a href="/passorg/list" class="list-group-item">Password Organizer</a>
                   </div>
                 </div>
     </body>
