Fixed urls and templates

--- a/todo/templates/about.html
+++ b/todo/templates/about.html
@@ -5,7 +5,20 @@
     <title>About</title>
 </head>
 <body>
-    {% include 'template.html' %}
-        <h1>About page</h1>
+{% include 'template.html' %}
+    <div class="col-md-10">
+        <h1 align="center">About page</h1><hr>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras porta purus sit amet sapien iaculis placerat.
+            Mauris augue felis, posuere hendrerit interdum sit amet, ultrices et ante. Nulla ullamcorper augue id
+            viverra mollis. Maecenas ligula libero, laoreet quis consequat ut, facilisis euismod lacus. Donec nec
+            elementum nunc. Nullam ac commodo odio. Ut vehicula, mauris sit amet rhoncus tristique, odio eros
+            consectetur erat, laoreet mollis erat ligula eleifend ipsum. Sed et consectetur ligula. Vestibulum ante
+            ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam dignissim eleifend lorem,
+            sit amet pulvinar erat ullamcorper non. Mauris suscipit sapien velit. Etiam interdum malesuada mauris non
+            molestie. Vivamus mollis non lorem sit amet volutpat. In tempor nec est sed pharetra. Vestibulum volutpat
+            semper sem, vel pellentesque nunc lobortis id.
+        </p><hr>
+    </div>
 </body>
 </html>
