--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -1,51 +1,49 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-        <title>Organizer</title>
-    </head>
-    <body>
-          <div class="navbar navbar-default">
-            <div class="container">
-              <div class="navbar-header">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+    <title>Simple Organizer</title>
+</head>
+<body>
+    <div class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/organizer/main">SP_lutsk</a>
-              </div>
-              <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="/organizer/main">Home</a></li>
-                  <li><a href="/organizer/about">About</a></li>
-                  <li><a href="#" align="right">HELLO {{ user }} </a></li>
-                </ul>
-                  <ul class="sidebar-nav">
-                       {% if user.is_authenticated %}
-                         <li>User: {{ user.get_username }}</li>
-                         <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
-                         {% else %}
-                         <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
-                       {% endif %}
-                  </ul>
-              </div><!--/.nav-collapse -->
+                <a class="navbar-brand" href="/">SP_lutsk</a>
             </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="/">Home</a></li>
+                  <li><a href="/about/">About</a></li>
+                  <li><a href="#">Hello {{ user }} </a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'logout'%}?next={{request.path}}">Log Out</a></li>
+                    {% else %}
+                    <li><a href="{% url 'login'%}">Log In</a></li>
+                    {% endif %}
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
-                <div class="col-md-2">
-                  <div class="list-group">
-                    <a href="/organizer/main" class="list-group-item active">_SIMPLE ORGANIZER_</a>
-                    <a href="#" class="list-group-item" align="center" ><b>Hello<br>{{user}}</b><br>
-                        <img src="{{user_avatar}}"/></a>
-                    <a href="/task/cat/list" class="list-group-item">Task</a>
-                    <a href="/diary" class="list-group-item">Diary</a>
-                    <a href="/budget/invoice/list" class="list-group-item">Budget</a>
-                    <a href="/contacts/list" class="list-group-item">Contacts</a>
-                    <a href="/passorg/list" class="list-group-item">Password Organizer</a>
-                  </div>
-                </div>
-    </body>
+    </div>
+    <div class="col-md-2">
+        <div class="list-group">
+            <a href="/" class="list-group-item active" align="center">*** SIMPLE ORGANIZER ***</a>
+            <a href="#" class="list-group-item" align="center"><b>Hello<br>{{user}}</b><br>
+                <img src="{{user_avatar}}"/></a>
+            <a href="/task/cat/list" class="list-group-item">Task</a>
+            <a href="/diary" class="list-group-item">Diary</a>
+            <a href="/budget/invoice/list" class="list-group-item">Budget</a>
+            <a href="/contacts/list" class="list-group-item">Contacts</a>
+            <a href="/password/list" class="list-group-item">Password Organizer</a>
+        </div>
+    </div>
+</body>
 </html>
