Add Social account to OrganizerUser (social-auth-app-django)

--- a/todo/templates/registration/login.html
+++ b/todo/templates/registration/login.html
@@ -45,7 +45,7 @@
     {% endblock %}
     <hr>
     <div>
-        <td class="facebook"><a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Login with Facebook</a>
+        <td class="facebook"><a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
         </td><hr>
     </div>
     <div>
