--- a/accounts/templates/password.html
+++ b/accounts/templates/password.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-
+{% include 'base.html' %}
 {% block content %}
   <h2>Change Password</h2>
   {% if not user.has_usable_password %}
