--- a/todo/templates/registration/login.html
+++ b/todo/templates/registration/login.html
@@ -44,21 +44,15 @@
 
     {% endblock %}
     <hr>
-    <div>
-        <td class="facebook"><a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
-        </td><hr>
-    </div>
-    <div>
-        <td><a href="{% url 'social:begin' 'github' %}?next={{ request.path }}">Login with GitHub</a><br></td><hr>
-    </div>
-    <div>
-        <td><a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">Login with Google</a><br></td><hr>
-    </div>
-    <div
-      class="fb-like"
-      data-share="true"
-      data-width="450"
-      data-show-faces="true">
-    </div>
+    <fieldset>
+    <legend>Soc log</legend>
+    <ul>
+        <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a><br>
+        <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br>
+        <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+        <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>
+        <a href="{% url 'social:begin' 'linkedin-oauth2' %}">Login with LinkedIn</a>
+    </ul>
+    </fieldset>
 </body>
 </html>
