--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -23,17 +23,15 @@
                 <ul class="nav navbar-nav">
                   <li class="active"><a href="/">Home</a></li>
                   <li><a href="/about/">About</a></li>
+                    <li><a></a></li>
                     {% if user.is_authenticated %}
-                    <li><a href="{% url 'logout'%}?next={{ request.path }}">Log Out</a></li>
+                    <li><a href="{% url 'logout'%}">Log Out</a></li>
+                    <li><a><b>Hello, {{ user.get_full_name }}!</b></a></li>
                     {% else %}
-                    <li><a href="{% url 'login'%}?next={{ request.path }}">Log In</a></li>
-                    {% endif %}
-                    <li><a href="/accounts/settings/">Settings Social Auth</a></li>
-                    {% if user.is_authenticated %}
-                    <li><a href="#"><b>Hello, {{ user.get_full_name }}!</b></a></li>
+                    <li><a href="{% url 'login'%}">Log In</a></li>
                     {% endif %}
                 </ul>
-            </div><!--/.nav-collapse -->
+            </div>
         </div>
     </div>
     <div class="col-md-2">
