--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -7,7 +7,11 @@
 <body>
 {% include 'template.html' %}
     <div class="col-md-10">
-        <h1 align="center">SIMPLE ORGANIZER<img align="right" src="{{user_avatar_big}}"/></h1><hr>
+        <h1 align="center">SIMPLE ORGANIZER</h1>
+            {% if user.is_authenticated %}
+            <img align="right" src="{{user_avatar_big}}"/>
+            {% endif %}
+        <hr>
     </div>
     <div class="col-md-10">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam gravida turpis purus, non tempus sapien luctus
