--- a/todo/templates/template.html
+++ b/todo/templates/template.html
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="/">Home</a></li>
+                  <li><a href="/">Home</a></li>
                   <li><a href="/about/">About</a></li>
                     <li><a></a></li>
                     {% if user.is_authenticated %}
@@ -37,8 +37,14 @@
     <div class="col-md-2">
         <div class="list-group">
             <a href="/" class="list-group-item active" align="center">*** SIMPLE ORGANIZER ***</a>
-            <a href="#" class="list-group-item" align="center"><b>Hello<br>{{user}}</b><br>
-                <img src="{{user_avatar}}"/></a>
+            <a href="#" class="list-group-item" align="center">
+                <b>Hello</b><br>
+                    {% if user.is_authenticated %}
+                    <b>{{user}}</b><br>
+                    <img src="{{user_avatar}}"/></a>
+                    {% else %}
+                    <b>Please Log In</b>
+                    {% endif %}
             <a href="/task/cat/list" class="list-group-item">Task</a>
             <a href="/diary" class="list-group-item">Diary</a>
             <a href="/budget/invoice/list" class="list-group-item">Budget</a>
