Updated html files

--- a/front/templates/home.html
+++ b/front/templates/home.html
@@ -1,1 +1,24 @@
 <h1>>>> Home <<<</h1>
+    <div>
+        <tr>
+            <td><span ng-click="active='home'">Home</span></td>
+        </tr>
+        <tr>
+            <td><span ng-click="active='login'">Login</span></td>
+        </tr>
+        <tr>
+            <td><span ng-click="active='about'">About</span></td>
+        </tr>
+        <tr>
+            <td><span><b><< ng-click</b></span></td>
+        </tr>
+        <p ng-show="active">Hello from <b>{{active}}</b></p>
+    </div>
+    <div>
+        <hr>
+        <h3>Users: ($http.get)</h3>
+        <div ng-repeat="user in users">
+            <span>{{ user.email | json }} ->> {{ user.password}}</span>
+        </div>
+        <hr>
+    </div>
