--- a/front/templates/login.html
+++ b/front/templates/login.html
@@ -5,9 +5,10 @@
         <label><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="password" ng-model="password" required>
         <button type="submit" ng-click="logIn()">Log In</button>
+        <button type="submit" ng-click="logOut()">Log Out</button>
         <label>
             <input type="checkbox" name="remember"> Remember me
         </label>
     <hr>
-        <span>Response: {{ token }}</span>
+        <span>Hello, {{ user }}</span>
     </div>
