--- a/front/templates/template.html
+++ b/front/templates/template.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title></title>
 </head>
 <body>
-    <h1 class="page-header">Home_page</h1>
 
 </body>
 </html>
