--- a/front/templates/task/task-home.html
+++ b/front/templates/task/task-home.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Password Organizer</title>
+    <title>Task Home</title>
 </head>
 <body>
-    <h1 class="page-header">Password Organizer <small><span class="glyphicon glyphicon-asterisk"></span></small></h1>
+    <h1 class="page-header">Task Home<small><span class="glyphicon glyphicon-check"></span></small></h1>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#">Short Task</a></li>
+        <li><a href="#">Task</a></li>
+        <li><a href="#">Event</a></li>
+        <li><a href="#">Category Task</a></li>
+    </ul>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
