--- a/front/templates/about.html
+++ b/front/templates/about.html
@@ -1,1 +1,17 @@
-<h1 class="page-header">About</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>About</title>
+</head>
+<body>
+    <h1 class="page-header">About page</h1>
+    <div class="well">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit
+            sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus
+            magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum.
+            Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+            Aenean lacinia bibendum nulla sed consectetur.</p>
+    </div>
+</body>
+</html>
