--- a/front/templates/home.html
+++ b/front/templates/home.html
@@ -5,7 +5,10 @@
     <title>Home</title>
 </head>
 <body>
-    <h1 class="page-header">Home_page</h1>
-
+    <h1 class="page-header">Home page</h1>
+    <div class="well">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit
+            sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
 </body>
 </html>
