--- a/front/templates/task/categoty-task.html
+++ b/front/templates/task/categoty-task.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Password Organizer</title>
+    <title>Category Task</title>
 </head>
 <body>
-    <h1 class="page-header">Password Organizer <small><span class="glyphicon glyphicon-asterisk"></span></small></h1>
+    <h1 class="page-header">Category Task <small><span class="glyphicon glyphicon-check"></span></small></h1>
+    <ul class="nav nav-tabs">
+        <li><a href="#">Task</a></li>
+        <li><a href="#">Task</a></li>
+        <li><a href="#">Event</a></li>
+        <li class="active"><a href="#">Category Task</a></li>
+    </ul>
     <div class="table-responsive">
         <table class="table table-striped">
             <tr>
                 <th># ID</th>
-                <th>Resource url</th>
-                <th>Password resource</th>
+                <th>Title</th>
             </tr>
             <tr>
                 <td>1</td>
-                <td>website.your</td>
-                <td>ertgergerg345</td>
+                <td>My home</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>New web page</td>
-                <td>asazazazaza34</td>
+                <td>Work</td>
             </tr>
         </table>
     </div>
@@ -34,12 +37,9 @@
     <div>
         <form role="form">
             <div class="col-md-4">
-                <input type="text" class="form-control" placeholder="Resource url">
+                Title<input type="text" class="form-control" placeholder="Title">
             </div>
-            <div class="col-md-4">
-                <input type="text" class="form-control" placeholder="Password resource">
-            </div>
-            <button type="button" class="btn btn-success">Add password</button>
+            <button type="button" class="btn btn-success">Add category</button>
         </form>
     </div>
 </body>
