--- a/front/templates/accounts/sing-up.html
+++ b/front/templates/accounts/sing-up.html
@@ -5,28 +5,19 @@
     <title>Sing Up</title>
 </head>
 <body>
-    <div class="container">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign up</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-        <label for="inputPassword2" class="sr-only">Password2</label>
-        <input type="password" id="inputPassword2" class="form-control" placeholder="Password2" required="">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-      </form>
-    </div>
-    <!-- Footer -->
-    <div class="row well">
-        <div class="col-md-12 text-center" >
-            <img src="img/icon_team_50x50.png" alt="Logo"><br>
-            <h6><b>{{ team | uppercase }} &copy {{ today | date:'yyyy'}}</b></h6><br>
-            <h6>{{ brand }}</h6><br>
-            <h6><b>Powered by</b><i> Oleksandr K. and <a href="https://github.com/m-pasha" class="navbar-link">
-                Pasha M.</a></i></h6><br>
+    <div class="container row">
+        <div class="col-md-4">
+          <form class="form-signin">
+            <h2 class="form-signin-heading">Please sign up</h2>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+            <label for="inputPassword2" class="sr-only">Password2</label>
+            <input type="password" id="inputPassword2" class="form-control" placeholder="Password2" required="">
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+          </form>
         </div>
     </div>
-    <!-- End Footer -->
 </body>
 </html>
